# starknet-jsonrpc-codegen

./: Cargo.toml  README.md
src/: main.rs  spec.rs
src/profiles/: 0.1.0.json  0.2.1.json  0.3.0.json  0.4.0.json  0.5.1.json  0.6.0.json  0.7.1.json  0.8.0.json  0.8.1.json  0.9.0.json
src/specs/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.1.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.2.1/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.3.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.4.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.5.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.5.1/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.6.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.7.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.7.1/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.8.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
src/specs/0.8.1/: starknet_api_openrpc.json  starknet_ws_api.json
src/specs/0.9.0/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  (+2 more)
src/subcommands/: generate.rs  mod.rs  print.rs
