[package]
name = "starknet-jsonrpc-codegen"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
edition = "2021"
description = """
Tool for generating the StarkNet JSON-RPC code used in starknet-rs
"""

[dependencies]
anyhow = "1.0.66"
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
