[package]
name = "starknet-jsonrpc-codegen"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
edition = "2021"
description = """
Tool for generating the StarkNet JSON-RPC code used in starknet-rs
"""
build = "src/build.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.2.7", features = ["derive", "env"] }
indexmap = { version = "1.9.2", features = ["serde"] }
regex = "1.7.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

[build-dependencies]
built = { version = "0.5.2", features = ["git2"] }
