[package]
name = "starknet-jsonrpc-codegen"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
edition = "2021"
description = """
Tool for generating the Starknet JSON-RPC code used in starknet-rs
"""
build = "src/build.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "env"] }
indexmap = { version = "1.9.3", features = ["serde"] }
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
built = { version = "0.6.0", features = ["git2"] }
